kubernetes/charts/templates/kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-mps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: device-mgmt-cors
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webui
                port:
                  number: 80
          - path: /activate
            pathType: Prefix
            backend:
              service:
                name: rps
                port: 
                  number: 8080
          - path: /deactivate
            pathType: Prefix
            backend:
              service:
                name: rps
                port: 
                  number: 8080
          - path: /maintenance
            pathType: Prefix
            backend:
              service:
                name: rps
                port: 
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-mps-login
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: device-mgmt-cors,api-login-rewrite
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /mps/login/api/v1/authorize
            pathType: Exact
            backend:
              service:
                name: mps
                port: 
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mps-redirection
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: device-mgmt-cors,mps-redirection-rewrite
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /mps/ws/relay/(.*)
            pathType: Prefix
            backend:
              service:
                name: mpsrouter
                port: 
                  number: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: device-mgmt-toolkit-jwt, device-mgmt-cors,admin-acl
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /rps
            pathType: Prefix
            backend:
              service:
                name: rps
                port:
                  number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mps
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: device-mgmt-toolkit-jwt,device-mgmt-cors, admin-acl
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /mps
            pathType: Prefix
            backend:
              service:
                name: mpsrouter
                port:
                  number: 8003
